--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -45,13 +45,15 @@
 	&__logo {
 		@include flexbox();
 		justify-content: space-between;
-		flex: 1 0 300px;
-		@include adaptive-size(120, -100, margin-right);
+		flex-grow: 0;
+		flex-shrink: 0;
+		@include adaptive-size(300, 150, flex-basis);
+		@include adaptive-size(120, 0, margin-right);
 		z-index: 2;									//!НЕ ТРОГАТЬ
 		img{
 			display: block;
-			width: 79px;
-			height: 79px;
+			@include adaptive-size(79, 31, width);
+			@include adaptive-size(79, 31, height);
 		}
 		span{
 			@include flexbox();
@@ -174,14 +176,14 @@
 			@include anim(1s,0s);
 		}
 
-		span{@include anim(0.3s,0s);top: 8px;left: 0px;position: absolute;width: 100%;height: 2px;background-color: #000;
+		span{@include anim(0.3s,0s);top: 8px;left: 0px;position: absolute;width: 100%;height: 2px;background-color: #fff;
 			&:first-child{top: 0px;}
 			&:last-child{top: auto;bottom: 0px;}
 		}
 
 		&.active{
 			span{@include scale(0);
-				background-color: #fb973b;
+				background-color: #fff;
 
 				&:first-child{
 					@include rotate(-45deg);top: 8px;
