--- a/css/style.css
+++ b/css/style.css
@@ -873,14 +873,28 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 300px;
-          flex: 1 0 300px;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   z-index: 2;
 }
 @media (max-width: 1366px) {
   .menu__logo {
-    margin-right: calc(-100px + (120 - -100) * ((100vw - 320px) / (1366 - 320)));
+    -ms-flex-preferred-size: calc(150px + (300 - 150) * ((100vw - 320px) / (1366 - 320)));
+        flex-basis: calc(150px + (300 - 150) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .menu__logo {
+    -ms-flex-preferred-size: 300px;
+        flex-basis: 300px;
+  }
+}
+@media (max-width: 1366px) {
+  .menu__logo {
+    margin-right: calc(0px + (120 - 0) * ((100vw - 320px) / (1366 - 320)));
   }
 }
 @media (min-width: 1366px) {
@@ -890,8 +904,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 .menu__logo img {
   display: block;
-  width: 79px;
-  height: 79px;
+}
+@media (max-width: 1366px) {
+  .menu__logo img {
+    width: calc(31px + (79 - 31) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .menu__logo img {
+    width: 79px;
+  }
+}
+@media (max-width: 1366px) {
+  .menu__logo img {
+    height: calc(31px + (79 - 31) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .menu__logo img {
+    height: 79px;
+  }
 }
 .menu__logo span {
   display: -webkit-box;
@@ -918,6 +950,11 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 767px) {
   .menu__logo span {
     font-size: calc(24px + 24 * (100vw / 1366));
+  }
+}
+@media (min-width: 1366px) {
+  .menu__logo span {
+    font-size: 48px;
   }
 }
 .menu__body {
@@ -1055,7 +1092,7 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #000;
+  background-color: #fff;
 }
 .header-menu__icon span:first-child {
   top: 0px;
@@ -1068,7 +1105,7 @@ h1, h2, h3, h4, h5, h6 {
   -ms-transform: scale(0);
   -webkit-transform: scale(0);
   transform: scale(0);
-  background-color: #fb973b;
+  background-color: #fff;
 }
 .header-menu__icon.active span:first-child {
   -ms-transform: rotate(-45deg);
