--- a/css/style.css
+++ b/css/style.css
@@ -821,11 +821,15 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   z-index: 50;
-  padding: 28px 0px 0px 0px;
 }
-@media (max-width: 992.98px) {
+@media (max-width: 1366px) {
   .header {
-    padding: 20px 0px;
+    padding-top: calc(16px + (28 - 16) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .header {
+    padding-top: 28px;
   }
 }
 .header::before {
@@ -836,7 +840,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: #000;
+  opacity: 0;
 }
 .header__menu {
   position: relative;
@@ -978,11 +982,22 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #fb973b;
     display: block;
     z-index: 1;
-    margin-top: 106px;
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
   }
+}
+@media (max-width: 992.98px) and (max-width: 1366px) {
+  .menu__body {
+    margin-top: calc(47px + (107 - 47) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (max-width: 992.98px) and (min-width: 1366px) {
+  .menu__body {
+    margin-top: 107px;
+  }
+}
+@media (max-width: 992.98px) {
   .menu__body.active {
     top: 0;
   }
