--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -46,6 +46,40 @@ $md4:479.98;			//брейкпоинт 4
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>===================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
+.main {
+
+	// .main__body
+
+	&__body {
+	}
+
+	// .main__title
+
+	&__title {
+	}
+
+	// .main__list
+
+	&__list {
+	}
+
+	// .main__link
+
+	&__link {
+	}
+
+	// .main__btn
+
+	&__btn {
+	}
+
+	// .main__btn-link
+
+	&__btn-link {
+	}
+}
+.container {
+}
 
 //===================================================================================================================
 
