--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 1366px;
   margin: 0 auto;
   width: 100%;
+  padding: 0px 24px 0px 24px;
 }
 
 /*!
@@ -898,7 +899,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 1366px) {
   .menu__logo {
-    margin-right: calc(0px + (120 - 0) * ((100vw - 320px) / (1366 - 320)));
+    margin-right: calc(-100px + (120 - -100) * ((100vw - 320px) / (1366 - 320)));
   }
 }
 @media (min-width: 1366px) {
@@ -979,7 +980,8 @@ h1, h2, h3, h4, h5, h6 {
     top: -100%;
     width: 100%;
     height: 100%;
-    background-color: #fb973b;
+    background-color: #000;
+    opacity: 0.95;
     display: block;
     z-index: 1;
     -webkit-transition: all 0.3s ease 0s;
@@ -989,12 +991,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 992.98px) and (max-width: 1366px) {
   .menu__body {
-    margin-top: calc(47px + (107 - 47) * ((100vw - 320px) / (1366 - 320)));
+    padding-top: calc(47px + (107 - 47) * ((100vw - 320px) / (1366 - 320)));
   }
 }
 @media (max-width: 992.98px) and (min-width: 1366px) {
   .menu__body {
-    margin-top: 107px;
+    padding-top: 107px;
   }
 }
 @media (max-width: 992.98px) {
@@ -1133,6 +1135,161 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
   bottom: 8px;
+}
+
+@media (max-width: 1366px) {
+  .main__body {
+    padding-top: calc(120px + (150 - 120) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .main__body {
+    padding-top: 150px;
+  }
+}
+@media (max-width: 1366px) {
+  .main__body {
+    padding-bottom: calc(62px + (120 - 62) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .main__body {
+    padding-bottom: 120px;
+  }
+}
+.main__title {
+  margin: 0px auto 56px;
+  font-family: Exo2;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+}
+@media (max-width: 1366px) {
+  .main__title {
+    max-width: calc(261px + (725 - 261) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .main__title {
+    max-width: 725px;
+  }
+}
+@media (max-width: 767px) {
+  .main__title {
+    font-size: calc(30px + 71.4 * ((100vw - 320px) / 1366));
+  }
+}
+@media (min-width: 767px) {
+  .main__title {
+    font-size: calc(30px + 42 * (100vw / 1366));
+  }
+}
+@media (min-width: 1366px) {
+  .main__title {
+    font-size: 72px;
+  }
+}
+.main__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media (max-width: 1366px) {
+  .main__list {
+    margin-bottom: calc(51px + (207 - 51) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (min-width: 1366px) {
+  .main__list {
+    margin-bottom: 207px;
+  }
+}
+@media (max-width: 767.98px) {
+  .main__list {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 767.98px) and (max-width: 1366px) {
+  .main__list {
+    max-width: calc(261px + (767.98 - 261) * ((100vw - 320px) / (1366 - 320)));
+  }
+}
+@media (max-width: 767.98px) and (min-width: 1366px) {
+  .main__list {
+    max-width: 767.98px;
+  }
+}
+.main__list li {
+  margin: 0px 49px 0px 0px;
+}
+@media (max-width: 767.98px) {
+  .main__list li {
+    margin: 0px 0px 11px 0px;
+  }
+}
+.main__list li:last-child {
+  margin-right: 0;
+}
+@media (max-width: 767.98px) {
+  .main__list li:last-child {
+    margin: 0px 0px 0px 0px;
+  }
+}
+.main__link {
+  font-family: Exo2;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+}
+.main__link.y {
+  color: #ffe600;
+  background: -webkit-gradient(linear, left bottom, left top, from(#ffe600), to(#ffd600));
+  background: -o-linear-gradient(bottom, #ffe600, #ffd600);
+  background: linear-gradient(to top, #ffe600, #ffd600);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.main__btn-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: Exo2;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
+  color: #141414;
+  margin: 0px auto;
+  width: 275px;
+  height: 52px;
+  border-radius: 30px;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#ffe600), to(#ffd600));
+  background-image: -o-linear-gradient(bottom, #ffe600, #ffd600);
+  background-image: linear-gradient(to top, #ffe600, #ffd600);
+  -webkit-box-shadow: 0 5px #e1b100;
+          box-shadow: 0 5px #e1b100;
+  -webkit-transition: all 0.2s ease 0s;
+  -o-transition: all 0.2s ease 0s;
+  transition: all 0.2s ease 0s;
+}
+.main__btn-link:active {
+  -webkit-box-shadow: 0 0 #e1b100;
+          box-shadow: 0 0 #e1b100;
+  -webkit-transform: translate3d(0px, 5px, 0px);
+          transform: translate3d(0px, 5px, 0px);
 }
 
 .form-row {
