--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -134,10 +134,36 @@ $md4:479.98;			//брейкпоинт 4
 		}
 	}
 }
-.container {
+//===================================================================================================================
+.page {
+	background-image: linear-gradient(to top, #ffe600, #ffd600);
+
+	// .page__body
+	&__body {
+		padding: 151px 0;
+	}
 }
 
-//===================================================================================================================
+.body-page {
+	@include flexbox();
+	justify-content:center;
+	align-items: center;
+
+	// .body-page__title
+
+	&__title {
+		@include Text-Style-5;
+		margin: 0 45px 0 0;
+		flex: 0 0 278px;
+	}
+
+	// .body-page__text
+
+	&__text {
+		@include Text-Style-6;
+		flex: 0 0 755px;
+	}
+}
 
 //===================================================================================================================
 
