--- a/#source/scss/forms.scss
+++ b/#source/scss/forms.scss
@@ -8,10 +8,7 @@
 
 //<BUTTONS>====================================================================================================
 .btn{
-	display: inline-block;
-	padding: 0px 0px;
-	&:hover{}
-	&.fw{width: 100%;}
+@extend .main__btn-link;
 }
 //</BUTTONS>====================================================================================================
 
@@ -60,23 +57,47 @@
 //</SELECT>====================================================================================================
 
 //<INPUT>====================================================================================================
-input[type=text],input[type=email],input[type=tel],textarea{-webkit-appearance:none;-moz-appearance:none;appearance:none;}
+input[type=text]
+,input[type=email],
+input[type=tel],
+textarea{
+	-webkit-appearance:none;
+	-moz-appearance:none;
+	appearance:none;
+}
+
 .input{
-	border: 1px solid #000;
-	height: 50px;
-	border-radius: 0 !important;
-	margin: 0px 0px 20px 0px;
-	width: 100%;
+	//размер, стилизация блока
 	display: block;
-	padding: 0px 20px;
-	&.focus{}
+	box-sizing: border-box;
+	height: 55px;
+	width: 275px;
+	//отступы
+	margin: 0px auto 10px;
+	padding: 0px 40px;
+	//стиль
+	font-family: Exo 2;
+	font-size: 14px;
+	font-weight: bold;
+	font-style: normal;
+	border: 1px solid #000000;
+	border-radius: 30px !important;
+	background: #FFFFFF;
+
+	&.focus{
+
+	}
+
 	&.err{
 		border: 1px solid red;
 	}
 }
 textarea.input{
-	resize:none;
-	padding: 0px 0px;
+	resize:none;		//изменение размера
+	padding: 19px 0px 0px 40px;
+	width: 275px;
+	height: 116px;
+	@include adaptive-size(28, 47, margin-bottom);
 }
 //</INPUT>====================================================================================================
 
